k8s_practice_yml/voting-micro/test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: testing
  name: testing
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: testing
  template:
    metadata:
      labels:
        app: testing
    spec:
      containers:
      - image: dockersamples/examplevotingapp_worker
        name: testing
