k8s_practice_yml/voting-micro/istio-gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: istio-gatewayclass
spec:
  controllerName: istio.io/gateway-controller

---

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: istio-gateway
  namespace: vote
spec:
  gatewayClassName: istio-gatewayclass
  listeners:
  - name: default
    hostname: "aksdemo.refactorq.com"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: istio-http-route
  namespace: vote
spec:
  parentRefs:
  - name: istio-gateway
    namespace: vote
  hostnames: ["aksdemo.refactorq.com"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: vote
      port: 8080
